packages/core/src/components/Dropdown/components/Trigger/Trigger.module.scss
@import "~@vibe/style/dist/mixins";

.triggerWrapper {
  flex-grow: 1;
  position: relative;
  min-width: 1px;
  display: flex;
  align-items: center;
  cursor: pointer;
  outline: none;

  &.small {
    min-height: 32px;
  }

  &.medium {
    min-height: 40px;
  }

  &.large {
    min-height: 48px;
  }

  .inputWrapper {
    border: none;
    width: 100%;
    background: transparent;

    &.small {
      height: 24px;
      min-height: 24px;
    }

    &.multiSelected {
      width: 48px;
      flex-shrink: 0;
      padding: 0 var(--spacing-xs);

      &.fullWidth {
        width: 100%;
        flex-grow: 1;
      }
    }

    &.hasSelected {
      position: absolute;
      inset: 0;
      cursor: pointer;
    }
  }

  .selectedItem {
    position: relative;
    pointer-events: none;
    inset: 0;
    padding-inline-start: var(--spacing-xs);
    width: 100%;
    @include smoothing-text;

    &.small {
      padding-inline-start: var(--spacing-small);
      min-height: 32px;
      height: 32px;
    }

    &.medium {
      min-height: 40px;
      height: 40px;
    }

    &.large {
      min-height: 48px;
      height: 48px;
    }

    &.faded {
      opacity: 0.6;
    }
  }

  .placeholderText {
    padding-inline-start: var(--spacing-small);
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    cursor: pointer;
    color: var(--placeholder-color);
    @include smoothing-text;

    &.disabled {
      color: var(--disabled-text-color);
    }
  }
}

.multiWrapper {
  padding: var(--spacing-xs) 0 var(--spacing-xs) var(--spacing-small);
  width: 100%;
}

.actionsWrapper {
  padding: 0 var(--spacing-xs);
}

